Bug 11329 - fix memory leaks in the defer_rename case
Summary: fix memory leaks in the defer_rename case
Status: RESOLVED FIXED
Alias: None
Product: Samba 4.1 and newer
Classification: Unclassified
Component: File services (show other bugs)
Version: 4.2.2
Hardware: All All
: P5 normal (vote)
Target Milestone: ---
Assignee: Karolin Seeger
QA Contact: Samba QA Contact
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-06-15 06:39 UTC by Stefan Metzmacher
Modified: 2015-07-11 20:01 UTC (History)
2 users (show)

See Also:


Attachments
Patches for v4-2-test (1.55 KB, patch)
2015-06-30 08:22 UTC, Stefan Metzmacher
jra: review+
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Stefan Metzmacher 2015-06-15 06:39:46 UTC
smbd_smb2_setinfo_send() uses:

                data = NULL;
                data_size = in_input_buffer.length;
                if (data_size > 0) {
                        data = (char *)SMB_MALLOC_ARRAY(char, data_size);
                        if (tevent_req_nomem(data, req)) {
                                return tevent_req_post(req, ev);
                        }
                        memcpy(data, in_input_buffer.data, data_size);
                }

This is not cleanup in all code pathes.
Comment 1 Stefan Metzmacher 2015-06-30 08:22:58 UTC
Created attachment 11216 [details]
Patches for v4-2-test
Comment 2 Jeremy Allison 2015-06-30 18:21:29 UTC
Re-assigning to Karolin for inclusion in 4.2.next.
Comment 3 Karolin Seeger 2015-07-05 19:14:05 UTC
Pushed to autobuild-v4-2-test.
Comment 4 Karolin Seeger 2015-07-11 20:01:13 UTC
(In reply to Karolin Seeger from comment #3)
Pushed to v4-2-test.
Closing out bug report.

Thanks!